fix[feat]: For spacing, nav bar needs to always display, just be hidden

--- a/mkdocs_landing/css/responsivity.css
+++ b/mkdocs_landing/css/responsivity.css
@@ -5,7 +5,7 @@
     /** Table of contents **/
 
     #toc {
-        display: none;
+        visibility: hidden;
     }
 }
 
